--- a/SandBox.ioc
+++ b/SandBox.ioc
@@ -13,13 +13,15 @@ Mcu.Name=STM32F401R(D-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PB10
-Mcu.Pin11=PB12
-Mcu.Pin12=PA13
-Mcu.Pin13=PA14
-Mcu.Pin14=PB3
-Mcu.Pin15=VP_CRC_VS_CRC
-Mcu.Pin16=VP_SYS_VS_Systick
+Mcu.Pin10=PA5
+Mcu.Pin11=PB10
+Mcu.Pin12=PB12
+Mcu.Pin13=PA13
+Mcu.Pin14=PA14
+Mcu.Pin15=PA15
+Mcu.Pin16=PB3
+Mcu.Pin17=VP_CRC_VS_CRC
+Mcu.Pin18=VP_SYS_VS_Systick
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin3=PH0 - OSC_IN
 Mcu.Pin4=PH1 - OSC_OUT
@@ -27,8 +29,8 @@ Mcu.Pin5=PC2
 Mcu.Pin6=PC3
 Mcu.Pin7=PA2
 Mcu.Pin8=PA3
-Mcu.Pin9=PA5
-Mcu.PinsNb=17
+Mcu.Pin9=PA4
+Mcu.PinsNb=19
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401RETx
@@ -54,6 +56,12 @@ PA14.GPIO_Label=TCK
 PA14.Locked=true
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA15.GPIOParameters=PinState,GPIO_Label,GPIO_ModeDefaultOutputPP
+PA15.GPIO_Label=GPIO_PIN_CS
+PA15.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PA15.Locked=true
+PA15.PinState=GPIO_PIN_SET
+PA15.Signal=GPIO_Output
 PA2.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PA2.GPIO_Label=USART_TX
 PA2.GPIO_Mode=GPIO_MODE_AF_PP
@@ -70,6 +78,8 @@ PA3.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA3.Locked=true
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
+PA4.Locked=true
+PA4.Signal=GPIO_Output
 PA5.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PA5.GPIO_Label=LD2 [Green Led]
 PA5.GPIO_Mode=GPIO_MODE_OUTPUT_PP
@@ -77,10 +87,12 @@ PA5.GPIO_PuPd=GPIO_NOPULL
 PA5.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA5.Locked=true
 PA5.Signal=GPIO_Output
+PB10.GPIOParameters=GPIO_PuPd
+PB10.GPIO_PuPd=GPIO_NOPULL
 PB10.Mode=Full_Duplex_Master
 PB10.Signal=SPI2_SCK
-PB12.Mode=NSS_Signal_Hard_Output
-PB12.Signal=SPI2_NSS
+PB12.Locked=true
+PB12.Signal=GPIO_Input
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=SWO
 PB3.Locked=true
@@ -174,10 +186,11 @@ RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=96000000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
+SPI2.CLKPhase=SPI_PHASE_2EDGE
 SPI2.Direction=SPI_DIRECTION_2LINES
-SPI2.IPParameters=VirtualType,Mode,Direction,VirtualNSS
+SPI2.FirstBit=SPI_FIRSTBIT_LSB
+SPI2.IPParameters=VirtualType,Mode,Direction,FirstBit,CLKPhase
 SPI2.Mode=SPI_MODE_MASTER
-SPI2.VirtualNSS=VM_NSSHARD
 SPI2.VirtualType=VM_MASTER
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
